--- a/index.html
+++ b/index.html
@@ -2,11 +2,6 @@
 layout: default
 ---
 
-
-<a id="skip-to-content" href="#content">Skip to the content.</a>
-
-{% include header.html %}
-
 <!-- include the modals -->
 {% for city in site.data.villes_tier_1 %}
   {% include city_modal.html %}
@@ -20,9 +15,10 @@ layout: default
   {% include city_modal.html %}
 {% endfor %}
 
-<!-- the maps -->
+
+<div class="lead text-center py-4 text-light motivation-lead">Avec Remote France, trouvez la ville française idéale pour vous installer et travailler en freelance !</div>
+
 <main id="content" class="main-content" role="main">
-  <div class="project-tagline">{{ site.description }}</div>
   <h1 class="tier_1title">Le podium <div class="trophies"><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span></div></h1>
   <p>Voici les villes avec les meilleurs classements à travers toutes les catégories. Commencez déjà à faire vos bagages, il y a tout ce qu'il vous faut dans ces villes !</p>
   <div class="tier_1">
@@ -61,8 +57,9 @@ layout: default
       </div>
       {% endfor %}
     </div>
+</main>
 
-  {% include footer.html %}
+{% include footer.html %}
 
 <!-- include the modals -->
 {% for city in site.data.villes_tier_1 %}
@@ -76,5 +73,3 @@ layout: default
 {% for city in site.data.villes_tier_3 %}
   {% include map_script.html %}
 {% endfor %}
-
-</main>
