--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
 <!-- include the modals -->
-{% for city in site.data.villes_tier_1 %}
+{% for city in site.data.city.villes_tier_1 %}
   {% include city_modal.html %}
 {% endfor %}
 
-{% for city in site.data.villes_tier_2 %}
+{% for city in site.data.city.villes_tier_2 %}
   {% include city_modal.html %}
 {% endfor %}
 
-{% for city in site.data.villes_tier_3 %}
+{% for city in site.data.city.villes_tier_3 %}
   {% include city_modal.html %}
 {% endfor %}
 
@@ -22,7 +22,7 @@ layout: default
   <h1 class="tier_1title">Le podium <div class="trophies"><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span></div></h1>
   <p>Voici les villes avec les meilleurs classements à travers toutes les catégories. Commencez déjà à faire vos bagages, il y a tout ce qu'il vous faut dans ces villes !</p>
   <div class="tier_1">
-      {% for city in site.data.villes_tier_1 %}
+      {% for city in site.data.city.villes_tier_1 %}
       <div class="ville">
         <h2><span class="classement">{{ city.rang }}</span>{{ city.nom }}</h2>
         {% include city_ratings.html %}            
@@ -35,7 +35,7 @@ layout: default
   <h1 class="tier_2title">Le peloton <div class="trophies"><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy lightsoff"></span></div></h1>
   <p>Ces villes ont des forces indéniables. A regarder de près !</p>
   <div class="tier_2">
-      {% for city in site.data.villes_tier_2 %}
+      {% for city in site.data.city.villes_tier_2 %}
       <div class="ville">
         <h2><span class="classement">{{ city.rang }}</span>{{ city.nom }}</h2>
         {% include city_ratings.html %}            
@@ -48,7 +48,7 @@ layout: default
   <h1 class="tier_3title">Les poursuivants <div class="trophies"><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy"></span><span class="fa fa-trophy lightsoff"></span><span class="fa fa-trophy lightsoff"></span></div></h1>
   <p>Encore, toujours plus de choix ! Notre algorythme (que dis-je, notre "<b>IA</b>") nous signale également ces villes françaises.</p>
     <div class="tier_3">
-      {% for city in site.data.villes_tier_3 %}
+      {% for city in site.data.city.villes_tier_3 %}
       <div class="ville">
         <h2><span class="classement">{{ city.rang }}</span>{{ city.nom }}</h2>
         {% include city_ratings.html %}            
@@ -62,14 +62,14 @@ layout: default
 {% include footer.html %}
 
 <!-- include the modals -->
-{% for city in site.data.villes_tier_1 %}
+{% for city in site.data.city.villes_tier_1 %}
   {% include map_script.html %}
 {% endfor %}
 
-{% for city in site.data.villes_tier_2 %}
+{% for city in site.data.city.villes_tier_2 %}
   {% include map_script.html %}
 {% endfor %}
 
-{% for city in site.data.villes_tier_3 %}
+{% for city in site.data.city.villes_tier_3 %}
   {% include map_script.html %}
 {% endfor %}
